[package]
name = "barricade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.35.2"               # SDL2 bindings for Rust
# sdl2_ttf = "0.25.1"           # SDL2_ttf bindings for Rust

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]